--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
   "name": "promise-a",
   "version": "1.0.0",
-  "description": "",
+  "description": "Implement the Promises/A+ standard with Next ECMAScript",
   "main": "src/promise.js",
   "scripts": {
     "test": "babel-node test/test.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.10.2",
-    "core-js": "^3.6.5"
+    "@babel/runtime": "^7.14.6",
+    "core-js": "^3.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/node": "^7.10.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-private-methods": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@types/eslint": "^6.8.1",
-    "@types/prettier": "^2.0.1",
-    "babel-eslint": "^11.0.0-beta.2",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.5",
+    "@babel/node": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@types/eslint": "^7.2.13",
+    "@types/prettier": "^2.3.0",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-proposal": "^2.3.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.3.1",
     "promises-aplus-tests": "^2.1.2"
-  }
+  },
+  "config": {},
+  "author": "zhilidali@qq.com",
+  "homepage": "https://github.com/zhilidali/PA#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhilidali/PA.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zhilidali/PA/issues"
+  },
+  "keywords": [
+    "Promises/A+"
+  ],
+  "license": "ISC"
 }
